--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,9 @@
 <h1>Homes#top</h1>
+<div class="btn-wrapper col-10 mx-auto">
+  <div class="row">
+    <%= link_to 'ゲストログイン', public_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3", method: :post %>
+  </div>
+</div>
 
 <%= link_to "sign_in", new_customer_registration_path %><br>
 
