--- a/app/views/public/exercises/edit.html.erb
+++ b/app/views/public/exercises/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Public::Exercises#edit</h1>
-<p>Find me in app/views/public/exercises/edit.html.erb</p>
+<div class="btn-wrapper container">
+  <div class="row">
+    <div class="col-12 mx-auto">
+      <h1>Edit exercise</h1>
+    </div>
+    <div class="col-12 mx-auto">
+      <%= form_with model: @exercise, url: exercise_path, method: :patch do |f| %>
+        <table class="table">
+          <tr>
+            <th>投稿内容</th>
+            <td><%= f.text_area :body, class: "form-control", placeholder: "どうしたの？" %></td>
+          </tr>
+          <% if @exercise.body_images.present? %>
+            <tr>
+              <th class="col-3"><% @exercise.body_images.each do |images| %>
+                    <%= image_tag @exercise.get_body_images(images, 100, 100) %>
+                  <% end %>
+              </th>
+              <td><%= f.file_field :body_images, accept: "image/*", multiple: true %></td>
+            </tr>
+          <% end %>
+          <tr>
+            <th></th>
+            <td class="text-right"><%= f.submit "保存する", class: "btn btn-sm btn-info" %></td>
+          </tr>
+        </table>
+      <% end %>
+    </div>
+  </div>
+</div>
