[add] favorite_buttons favorites_all_page ranking_page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,10 @@
           <%= link_to 'exercise一覧', exercises_path, class: 'nav-link text-dark' %>
         </li>
         <li class="nav-item">
+          <%= link_to '筋肉ランキング', ranking_path, class: 'nav-link text-dark' %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to "新規投稿", new_exercise_path, class: 'nav-link text-dark' %>
         </li>
         <li class="nav-item">
