--- a/app/views/public/favorites/ranking.html.erb
+++ b/app/views/public/favorites/ranking.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Favorites#ranking</h1>
-<p>Find me in app/views/public/favorites/ranking.html.erb</p>
+<div class="btn-wrapper container">
+  <div class="row">
+    <div class="col-12 mx-auto">
+      <h1>筋肉ランキング</h1>
+    </div>
+    <%= render 'public/exercises/index', exercises: @favorites_ranking %>
+  </div>
+</div>
