--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,18 @@
-<h1>Homes#top</h1>
-<div class="btn-wrapper col-10 mx-auto">
+<div class="btn-wrapper container">
   <div class="row">
-    <%= link_to 'ゲストログイン', public_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3", method: :post %>
+    <div class="col-12 mx-auto">
+      <h1>My Exercise</h1>
+    </div>
+    <div class="col-12 mx-auto">
+      <div class="text-center"><%= link_to "サインイン", new_customer_registration_path, class: "btn btn-md btn-primary btn-block mb-3" %></div><br>
+      <br>
+      <div class="text-center"><%= link_to "ログイン", new_customer_session_path, class: "btn btn-md btn-success btn-block mb-3" %></div><br>
+      <br>
+      <div class="text-center"><%= link_to 'ゲストログイン', public_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3", method: :post %></div>
+    </div>
+  </div>
+</div>
   </div>
 </div>
 
-<%= link_to "sign_in", new_customer_registration_path %><br>
 
-<%= link_to "log_in", new_customer_session_path %><br>
-
-<%= link_to "log_out", destroy_customer_session_path, method: :delete %>
