--- a/app/views/public/exercises/_index.html.erb
+++ b/app/views/public/exercises/_index.html.erb
@@ -7,17 +7,17 @@
                 <%= image_tag e.customer.get_profile_image(50, 50) %>
               <% end %>
             </th>
-              <th>
-                <%= link_to customer_path(e.customer_id), class: "text-dark" do %>
-                  <%= e.customer.name %>
+            <td class="col-8">
+              <p><%= link_to customer_path(e.customer_id), class: "text-dark" do %>
+                  <strong><%= e.customer.name %></strong>
+                 <% end %>
+              </p>
+              <p><%= link_to e.body, exercise_path(e), class: "text-secondary" %></p>
+                <% if e.body_images.present? %>
+                  <% e.body_images.each do |images| %>
+                    <%= image_tag e.get_body_images(images, 100, 100) %>
+                  <% end %>
                 <% end %>
-              </th>
-            <td class="col-8"><p><%= link_to e.body, exercise_path(e), class: "text-secondary" %></p>
-            <% if e.body_images.present? %>
-              <% e.body_images.each do |images| %>
-                <%= image_tag e.get_body_images(images, 100, 100) %>
-              <% end %>
-            <% end %>
             </td>
             <td id="favorite_buttons_<%= e.id %>">
               <%= render 'public/favorites/favorite', exercise: e %>
