--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
 <header class="shadow-sm">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to "my_exercise", root_path, class: "text-warning" %></h5>
-  <div><%= render 'public/searches/search_form' %></div>
+  <% if customer_signed_in? %>
+    <div><%= render 'public/searches/search_form' %></div>
+  <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -12,6 +14,9 @@
           <%= link_to 'exercise一覧', exercises_path, class: 'nav-link text-dark' %>
         </li>
         <li class="nav-item">
+          <%= link_to 'タイムライン', timeline_path, class: 'nav-link text-dark' %>
+        </li>
+        <li class="nav-item">
           <%= link_to '筋肉ランキング', ranking_path, class: 'nav-link text-dark' %>
         </li>
 
@@ -20,6 +25,14 @@
         </li>
         <li class="nav-item">
           <%= link_to 'マイページ', customer_path(current_customer), class: 'nav-link text-dark' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
+        </li>
+
+        <% elsif admin_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "ユーザー一覧", admin_customers_path, class: 'nav-link text-dark' %>
         </li>
         <li class="nav-item">
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
