[update]all_layout

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,17 +1,11 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <div class="col-12 mx-auto">
-      <h1>My Exercise</h1>
+<div class="main-top">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1 id="top">My Exercise <i class="fas fa-running"></i></h1>
     </div>
-    <div class="col-12 mx-auto">
-      <div class="text-center"><%= link_to "サインイン", new_customer_registration_path, class: "btn btn-md btn-primary btn-block mb-3" %></div><br>
-      <br>
-      <div class="text-center"><%= link_to "ログイン", new_customer_session_path, class: "btn btn-md btn-success btn-block mb-3" %></div><br>
-      <br>
-      <div class="text-center"><%= link_to 'ゲストログイン', public_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3", method: :post %></div>
+    <div class="top-sentence">
+      筋トレやダイエットして身体を鍛えたり運動やスポーツをする事が好きな人達のためのSNSです。楽しく情報共有やアドバイスなどをしましょう。
     </div>
-  </div>
-</div>
   </div>
 </div>
 
