--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,21 +1,21 @@
 <% if exercise.favorited_by?(current_customer) %>
   <%= link_to exercise_favorites_path(exercise), class: "text-danger", method: :delete, remote: true do %>
-    <i class="fas fa-heart" color="red"></i>
+    <%= image_tag 'マッチョアイコン5.jpeg' %>
   <% end %>
   <%= link_to exercise_favorites_all_path(exercise), class: "text-info" do %>
     <% if exercise.favorites.count != 0 %>
-      <%= exercise.favorites.count %>筋肉
+      <%= exercise.favorites.count %>
     <% end %>
   <% end %>
 
 
 <% else %>
   <%= link_to exercise_favorites_path(exercise), class: "text-danger", method: :post, remote: true do %>
-    <i class="far fa-heart"></i>
+    <%= image_tag 'マッチョのイラスト4.jpeg' %>
   <% end %>
   <%= link_to exercise_favorites_all_path(exercise), class: "text-info" do %>
     <% if exercise.favorites.count != 0 %>
-      <%= exercise.favorites.count %>筋肉
+      <%= exercise.favorites.count %>
     <% end %>
   <% end %>
 <% end %>
