--- a/app/views/public/favorites/favorites_all.html.erb
+++ b/app/views/public/favorites/favorites_all.html.erb
@@ -1,10 +1,8 @@
 <div class="btn-wrapper container">
   <div class="row">
+    <h1>いいねした一覧</h1>
     <div class="col-12 mx-auto">
-      <h1>筋肉した一覧</h1>
-    </div>
-    <div class="col-12 mx-auto">
-        <%= render 'public/relationships/customers_info', customers_info: @customers %>
+      <%= render 'public/relationships/customers_info', customers_info: @customers %>
     </div>
   </div>
 </div>
