--- a/app/views/public/favorites/ranking.html.erb
+++ b/app/views/public/favorites/ranking.html.erb
@@ -1,8 +1,6 @@
 <div class="btn-wrapper container">
   <div class="row">
-    <div class="col-12 mx-auto">
-      <h1>筋肉ランキング</h1>
-    </div>
+    <h1>ランキング</h1>
     <%= render 'public/exercises/index', exercises: @favorites_ranking %>
   </div>
 </div>
