--- a/app/views/public/searches/index.html.erb
+++ b/app/views/public/searches/index.html.erb
@@ -1,17 +1,16 @@
 <div class="btn-wrapper container">
   <div class="row">
+    <h1>検索結果</h1>
     <div class="col-12 mx-auto">
-      <h1>検索結果</h1>
-    </div>
-    <div class="col-12 mx-auto">
-      <p><%= @word %>の検索結果</p>
-      <% if @range == "ユーザー名" %>
-        <% if @customers.count == 0 %>
-          <p>見つかりませんでした。</p>
-        <% else %>
-          <%= render 'public/relationships/customers_info', customers_info: @customers %>
+      <div class="content">
+        <p><%= @word %>の検索結果</p>
+        <% if @range == "ユーザー名" %>
+          <% if @customers.count == 0 %>
+            <p>見つかりませんでした。</p>
+          <% else %>
+            <%= render 'public/relationships/customers_info', customers_info: @customers %>
         <% end %>
-    </div>
+      </div>
       <% else %>
         <% if @exercises.count == 0 %>
           <p>見つかりませんでした。</p>
@@ -19,5 +18,6 @@
           <%= render 'public/exercises/index', exercises: @exercises %>
         <% end %>
       <% end %>
+    </div>
   </div>
 </div>
