--- a/app/views/public/favorites/destroy.js.erb
+++ b/app/views/public/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#favorite_buttons_<%= @exercise.id %>').html('<%= j(render "public/favorites/favorite", exercise: @exercise) %>');
+$('.favorite_buttons_<%= @exercise.id %>').html('<%= j(render "public/favorites/favorite", exercise: @exercise) %>');
