--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h2 class="signup-title">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer' do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -27,8 +28,9 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" , class: "btn btn-sm btn-success"%>
   </div>
 <% end %>
 
 <%= render "public/shared/links" %>
+</div>
