--- a/app/views/public/searches/_search_form.html.erb
+++ b/app/views/public/searches/_search_form.html.erb
@@ -1,10 +1,13 @@
 <% if customer_signed_in? %>
-  <div class="search_form">
-    <%= form_with url: searches_path, method: :get do |f| %>
-      <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['ユーザー名'], ['投稿内容']]) %>
-      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn btn-sm btn-success" %>
-    <% end %>
-  </div>
+  <%= form_with url: searches_path, method: :get do |f| %>
+    <div class="form-inline">
+      <div class="form-group">
+        <div class="search_form col-sm-12"><%= f.text_field :word, class: "form-control" %>
+          <%= f.select :range, options_for_select([['ユーザー名'], ['投稿内容']]) %>
+          <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+          <%= f.submit "検索", class: "btn btn-outline-success" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
 <% end %>
